# MDXAlchemy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
TM1Alchemy/mdx/: parser.py  transformer.py
config/: config.ini.example
mdxalchemy/: convert.py  schema.py
mdxalchemy/lark/: utils.py
mdxalchemy/lark/mdx/: __init__.py  analyzer.py  const.py  export.py  grammar.lark  schema.py
scripts/: build_mdx_test_case.py  temp.json
tests/: test_lark_mdx.py  test_mdx.py  test_tokens.py
tests/assert/: case001.mdx.json  simple_mdx.mdx.json
tests/case/: case001.mdx  simple_mdx.mdx
tm1alchemy/mdx/: grammar.lark
