[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project]
name = "mdxalchemy"
version = "0.1.0"
description = "A TM1 MDX query compiler in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Joe Chow", email = "jchow@cubewise.com"}
]
keywords = ["mdx", "tm1", "compiler", "olap", "Cubewise", "TM1", "Python"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Database :: Front-Ends",
]

dependencies = [
    "lark",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit", 
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
