[project]
name = "TM1Alchemy"
version = "0.1.0"
description = "A TM1 compiler in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Joe Chow", email = "jchow@cubewise.com"}
]
keywords = ["mdx", "tm1", "compiler", "olap", "Cubewise", "TM1", "Python"]

dependencies = [
    "lark",
    "TM1py==2.1.0",
    "mdxpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["TM1Alchemy*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.yapf]
based_on_style = "google"
COLUMN_LIMIT = 120
indent_width = 4
spaces_before_comment = 4
allow_split_before_dict_value = false
split_before_named_assigns = false
